src/escp/bindings.rs

#[repr(C)]
#[repr(align(64))]
#[derive(Debug, Copy, Clone)]
pub struct dtn_args {
    pub do_server: bool,
    pub do_ssh: bool,
    pub do_crypto: bool,
    pub do_hash: bool,
    pub do_preserve: bool,
    pub nodirect: bool,
    pub recursive: bool,
    pub ip_mode: u8,
    pub logging_fd: ::core::ffi::c_int,
    pub mtu: ::core::ffi::c_int,
    pub block: ::core::ffi::c_int,
    pub flags: ::core::ffi::c_int,
    pub QD: ::core::ffi::c_int,
    pub compression: ::core::ffi::c_int,
    pub sparse: ::core::ffi::c_int,
    pub disable_io: i64,
    pub pacing: u64,
    pub io_engine_name: *mut ::core::ffi::c_char,
    pub io_engine_tx: ::core::ffi::c_int,
    pub io_engine_rx: ::core::ffi::c_int,
    pub window: ::core::ffi::c_uint,
    pub session_id: u64,
    pub crypto_key: [u8; 16usize],
    pub do_affinity: bool,
    pub cpumask_len: ::core::ffi::c_int,
    pub cpumask_bytes: [u8; 32usize],
    pub nodemask: u64,
    pub sock_store_count: ::core::ffi::c_int,
    pub __bindgen_padding_0: [u8; 36usize],
    pub sock_store: [sockaddr_storage; 32usize],
    pub fob: *mut file_object,
    pub __bindgen_padding_1: [u32; 14usize],
    pub thread_id: ::core::ffi::c_int,
    pub __bindgen_padding_2: [u32; 15usize],
    pub thread_count: ::core::ffi::c_int,
    pub __bindgen_padding_3: [u16; 30usize],
    pub active_port: u16,
    pub __bindgen_padding_4: [u64; 7usize],
    pub debug_claim: u64,
    pub __bindgen_padding_5: [u64; 7usize],
    pub debug_count: u64,
    pub debug_buf: [u8; 2097152usize],
    pub debug_poison: u64,
    pub __bindgen_padding_6: [u64; 6usize],
    pub msg_claim: u64,
    pub __bindgen_padding_7: [u64; 7usize],
    pub msg_count: u64,
    pub msg_buf: [u8; 2097152usize],
    pub msg_poison: u64,
    pub __bindgen_padding_8: [u64; 6usize],
    pub bytes_io: u64,
    pub __bindgen_padding_9: [u64; 7usize],
    pub files_closed: u64,
    pub __bindgen_padding_10: [u64; 7usize],
    pub files_open: u64,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of dtn_args"][::core::mem::size_of::<dtn_args>() - 4199296usize];
    ["Alignment of dtn_args"][::core::mem::align_of::<dtn_args>() - 64usize];
    ["Offset of field: dtn_args::do_server"][::core::mem::offset_of!(dtn_args, do_server) - 0usize];
    ["Offset of field: dtn_args::do_ssh"][::core::mem::offset_of!(dtn_args, do_ssh) - 1usize];
    ["Offset of field: dtn_args::do_crypto"][::core::mem::offset_of!(dtn_args, do_crypto) - 2usize];
    ["Offset of field: dtn_args::do_hash"][::core::mem::offset_of!(dtn_args, do_hash) - 3usize];
    ["Offset of field: dtn_args::do_preserve"]
        [::core::mem::offset_of!(dtn_args, do_preserve) - 4usize];
    ["Offset of field: dtn_args::nodirect"][::core::mem::offset_of!(dtn_args, nodirect) - 5usize];
    ["Offset of field: dtn_args::recursive"][::core::mem::offset_of!(dtn_args, recursive) - 6usize];
    ["Offset of field: dtn_args::ip_mode"][::core::mem::offset_of!(dtn_args, ip_mode) - 7usize];
    ["Offset of field: dtn_args::logging_fd"]
        [::core::mem::offset_of!(dtn_args, logging_fd) - 8usize];
    ["Offset of field: dtn_args::mtu"][::core::mem::offset_of!(dtn_args, mtu) - 12usize];
    ["Offset of field: dtn_args::block"][::core::mem::offset_of!(dtn_args, block) - 16usize];
    ["Offset of field: dtn_args::flags"][::core::mem::offset_of!(dtn_args, flags) - 20usize];
    ["Offset of field: dtn_args::QD"][::core::mem::offset_of!(dtn_args, QD) - 24usize];
    ["Offset of field: dtn_args::compression"]
        [::core::mem::offset_of!(dtn_args, compression) - 28usize];
    ["Offset of field: dtn_args::sparse"][::core::mem::offset_of!(dtn_args, sparse) - 32usize];
    ["Offset of field: dtn_args::disable_io"]
        [::core::mem::offset_of!(dtn_args, disable_io) - 40usize];
    ["Offset of field: dtn_args::pacing"][::core::mem::offset_of!(dtn_args, pacing) - 48usize];
    ["Offset of field: dtn_args::io_engine_name"]
        [::core::mem::offset_of!(dtn_args, io_engine_name) - 56usize];
    ["Offset of field: dtn_args::io_engine_tx"]
        [::core::mem::offset_of!(dtn_args, io_engine_tx) - 64usize];
    ["Offset of field: dtn_args::io_engine_rx"]
        [::core::mem::offset_of!(dtn_args, io_engine_rx) - 68usize];
    ["Offset of field: dtn_args::window"][::core::mem::offset_of!(dtn_args, window) - 72usize];
    ["Offset of field: dtn_args::session_id"]
        [::core::mem::offset_of!(dtn_args, session_id) - 80usize];
    ["Offset of field: dtn_args::crypto_key"]
        [::core::mem::offset_of!(dtn_args, crypto_key) - 88usize];
    ["Offset of field: dtn_args::do_affinity"]
        [::core::mem::offset_of!(dtn_args, do_affinity) - 104usize];
    ["Offset of field: dtn_args::cpumask_len"]
        [::core::mem::offset_of!(dtn_args, cpumask_len) - 108usize];
    ["Offset of field: dtn_args::cpumask_bytes"]
        [::core::mem::offset_of!(dtn_args, cpumask_bytes) - 112usize];
    ["Offset of field: dtn_args::nodemask"][::core::mem::offset_of!(dtn_args, nodemask) - 144usize];
    ["Offset of field: dtn_args::sock_store_count"]
        [::core::mem::offset_of!(dtn_args, sock_store_count) - 152usize];
    ["Offset of field: dtn_args::sock_store"]
        [::core::mem::offset_of!(dtn_args, sock_store) - 192usize];
    ["Offset of field: dtn_args::fob"][::core::mem::offset_of!(dtn_args, fob) - 4288usize];
    ["Offset of field: dtn_args::thread_id"]
        [::core::mem::offset_of!(dtn_args, thread_id) - 4352usize];
    ["Offset of field: dtn_args::thread_count"]
        [::core::mem::offset_of!(dtn_args, thread_count) - 4416usize];
    ["Offset of field: dtn_args::active_port"]
        [::core::mem::offset_of!(dtn_args, active_port) - 4480usize];
    ["Offset of field: dtn_args::debug_claim"]
        [::core::mem::offset_of!(dtn_args, debug_claim) - 4544usize];
    ["Offset of field: dtn_args::debug_count"]
        [::core::mem::offset_of!(dtn_args, debug_count) - 4608usize];
    ["Offset of field: dtn_args::debug_buf"]
        [::core::mem::offset_of!(dtn_args, debug_buf) - 4616usize];
    ["Offset of field: dtn_args::debug_poison"]
        [::core::mem::offset_of!(dtn_args, debug_poison) - 2101768usize];
    ["Offset of field: dtn_args::msg_claim"]
        [::core::mem::offset_of!(dtn_args, msg_claim) - 2101824usize];
    ["Offset of field: dtn_args::msg_count"]
        [::core::mem::offset_of!(dtn_args, msg_count) - 2101888usize];
    ["Offset of field: dtn_args::msg_buf"]
        [::core::mem::offset_of!(dtn_args, msg_buf) - 2101896usize];
    ["Offset of field: dtn_args::msg_poison"]
        [::core::mem::offset_of!(dtn_args, msg_poison) - 4199048usize];
    ["Offset of field: dtn_args::bytes_io"]
        [::core::mem::offset_of!(dtn_args, bytes_io) - 4199104usize];
    ["Offset of field: dtn_args::files_closed"]
        [::core::mem::offset_of!(dtn_args, files_closed) - 4199168usize];
    ["Offset of field: dtn_args::files_open"]
        [::core::mem::offset_of!(dtn_args, files_open) - 4199232usize];
};
extern "C" {
    pub fn meta_send(
        buf: *mut ::core::ffi::c_char,
        hdr: *mut ::core::ffi::c_char,
        len: ::core::ffi::c_int,
    );
}
extern "C" {
    pub fn tx_start(args: *mut dtn_args);
}
extern "C" {
    pub fn rx_start(args: *mut dtn_args) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn finish_transfer(args: *mut dtn_args);
}
extern "C" {
    pub fn dtn_waituntilready(arg: *mut ::core::ffi::c_void);
}
extern "C" {
    pub fn tx_init(args: *mut dtn_args);
}
extern "C" {
    pub fn get_bytes_io(dtn: *mut dtn_args) -> i64;
}
extern "C" {
    pub fn human_write(number: u64, is_bytes: bool) -> *mut ::core::ffi::c_char;
}
extern "C" {
    pub fn get_threads_finished() -> u64;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct fc_info_struct {
    pub state: u64,
    pub file_no: u64,
    pub bytes: u64,
    pub crc: u32,
    pub completion: u32,
    pub blocks: u64,
    pub pad2: [u64; 3usize],
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of fc_info_struct"][::core::mem::size_of::<fc_info_struct>() - 64usize];
    ["Alignment of fc_info_struct"][::core::mem::align_of::<fc_info_struct>() - 8usize];
    ["Offset of field: fc_info_struct::state"]
        [::core::mem::offset_of!(fc_info_struct, state) - 0usize];
    ["Offset of field: fc_info_struct::file_no"]
        [::core::mem::offset_of!(fc_info_struct, file_no) - 8usize];
    ["Offset of field: fc_info_struct::bytes"]
        [::core::mem::offset_of!(fc_info_struct, bytes) - 16usize];
    ["Offset of field: fc_info_struct::crc"]
        [::core::mem::offset_of!(fc_info_struct, crc) - 24usize];
    ["Offset of field: fc_info_struct::completion"]
        [::core::mem::offset_of!(fc_info_struct, completion) - 28usize];
    ["Offset of field: fc_info_struct::blocks"]
        [::core::mem::offset_of!(fc_info_struct, blocks) - 32usize];
    ["Offset of field: fc_info_struct::pad2"]
        [::core::mem::offset_of!(fc_info_struct, pad2) - 40usize];
};
extern "C" {
    pub fn xorshift64r(x: u64) -> u64;
}
extern "C" {
    pub fn fc_pop() -> *mut fc_info_struct;
}
extern "C" {
    pub fn meta_recv() -> *mut u8;
}
extern "C" {
    pub fn meta_complete();
}
extern "C" {
    pub fn file_incrementtail();
}
extern "C" {
    pub fn file_iow_remove(fs: *mut file_stat_type, id: ::core::ffi::c_int) -> u64;
}
